feat: refactor mappers to use Stream.toList() for improved readability